mit zammad integration

--- a/proxy/config/000-default.conf
+++ b/proxy/config/000-default.conf
@@ -1,10 +1,8 @@
-# sixcms-nohtaccess.conf
 #
 # Erkennen von index.php als index-Datei:
 DirectoryIndex index.php index.html
 ServerName proxy.regensburg.de
 # PHP4 Optionen:
-# sollten gesetzt werden in php.ini, da auch fuer Kommandozeilen-PHP genutzt
 
 # Fuer das DocumentRoot-Verzeichnis des [virtuellen] Hosts:
 <Directory "/var/www">
@@ -16,10 +14,14 @@ ServerName proxy.regensburg.de
    Allow from all
 </Directory>
 
+#
+# Anbindungen an eine im docker-compose file definierten container.
+# einfach
+#
 <VirtualHost *:80>
-    ServerAdmin sonnleitner.hans-juergen@app1.example.com
+    #ServerAdmin sonnleitner.hans-juergen@app1.example.com
     ServerName app1.example.com
-    DocumentRoot "/var/www"
+    #DocumentRoot "/var/www"
     ProxyPass / http://app1/
     ProxyPassReverse / http://app1/
     <Proxy *>
@@ -29,36 +31,55 @@ ServerName proxy.regensburg.de
 
 </VirtualHost>
 
-
-
-
 <VirtualHost *:80>
-    ServerAdmin sonnleitner.hans-juergen@app2.example.com
+    #ServerAdmin admin@example.com
     ServerName app2.example.com
-    DocumentRoot "/var/www"
+    #DocumentRoot "/var/www"
     ProxyPass / http://app2/
     ProxyPassReverse / http://app2/
     <Proxy *>
         Order deny,allow
         Allow from all
     </Proxy>
-
 </VirtualHost>
-
+#
+# Anbindung an externe Instanz.
+# da die Server im gleichen Netzwerk eingehängt sind, kann das Proxy-Concept greifen.
+#
 <VirtualHost *:80>
-    ServerAdmin sonnleitner.hans-juergen@app2.example.com
+    ServerAdmin admin@example.com
     ServerName app3.example.com
-    DocumentRoot "/var/www"
+    #DocumentRoot "/var/www"
     ProxyPass / http://app3/
     ProxyPassReverse / http://app3/
     <Proxy *>
         Order deny,allow
         Allow from all
     </Proxy>
-
 </VirtualHost>
-
-
+#
+# Anbindung an eine externe zammad Instanz.
+#
+# über die subdomain funktioniert es, über die url (siehe unten) nicht.
+# Wichtig ist dabei, das das Netzwerk des Proxy und des Zammad-Containers miteinander 
+# bekannt sind.
+#
+<VirtualHost *:80>
+    ServerAdmin admin@aexample.com
+    ServerName tickets.example.com
+    #DocumentRoot "/var/www"
+    ProxyPass / http://zammad-nginx/
+    ProxyPassReverse / http://zammad-nginx/
+    <Proxy *>
+        Order deny,allow
+        Allow from all
+    </Proxy>
+</VirtualHost>
+#
+# Die einbindungen mit "glatten" Urls.
+# Einfache Inhalte funktionieren, 
+# komplexe anbindungen können nicht immer funktionieren.
+#
 <VirtualHost *:80>
     ServerAdmin sonnleitner.hans-juergen@example.com
     ServerName example.com
@@ -72,6 +93,9 @@ ServerName proxy.regensburg.de
 
     ProxyPass /app3/ http://app3/
     ProxyPassReverse /app3/ http://app3/
+
+    ProxyPass /tickets/ http://zammad-nginx/
+    ProxyPassReverse /tickets/ http://zammad-nginx/
 
 
     <Proxy *>
