--- a/app3ex/000-default.conf
+++ b/app3ex/000-default.conf
@@ -2,7 +2,7 @@
 #
 # Erkennen von index.php als index-Datei:
 DirectoryIndex index.php index.html
-ServerName webapp1.regensburg.de
+ServerName webapp1.example.com
 # PHP4 Optionen:
 # sollten gesetzt werden in php.ini, da auch fuer Kommandozeilen-PHP genutzt
 
@@ -16,9 +16,9 @@ ServerName webapp1.regensburg.de
    Allow from all
 </Directory>
 
-ServerName webapp1.regensburg.de
+ServerName webapp1.example.com
 <VirtualHost *:80>
-    ServerAdmin sonnleitner.hans-juergen@regensburg.de
+    ServerAdmin sonnleitner.hans-juergen@example.com
     DocumentRoot "/var/www"
     ServerAlias webapp3.fritz.box
         ErrorLog ${APACHE_LOG_DIR}/error.log
