--- a/proxy/config/000-default.conf
+++ b/proxy/config/000-default.conf
@@ -1,7 +1,7 @@
 #
 # Erkennen von index.php als index-Datei:
 DirectoryIndex index.php index.html
-ServerName proxy.regensburg.de
+ServerName proxy.example.com
 # PHP4 Optionen:
 
 # Fuer das DocumentRoot-Verzeichnis des [virtuellen] Hosts:
@@ -22,8 +22,8 @@ ServerName proxy.regensburg.de
     #ServerAdmin sonnleitner.hans-juergen@app1.example.com
     ServerName app1.example.com
     #DocumentRoot "/var/www"
-    ProxyPass / http://app1/
-    ProxyPassReverse / http://app1/
+    ProxyPass / http://app1_test.example.com/
+    ProxyPassReverse / http://app1_test.example.com/
     <Proxy *>
         Order deny,allow
         Allow from all
@@ -35,8 +35,8 @@ ServerName proxy.regensburg.de
     #ServerAdmin admin@example.com
     ServerName app2.example.com
     #DocumentRoot "/var/www"
-    ProxyPass / http://app2/
-    ProxyPassReverse / http://app2/
+    ProxyPass / http://app2.example.com/
+    ProxyPassReverse / http://app2.example.com/
     <Proxy *>
         Order deny,allow
         Allow from all
