--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
-version: "3"
+version: "3.5"
 services:
   app1:
     build:
       context: .
       dockerfile: ./app1/Dockerfile
     container_name: web_app1
+    hostname: ${HostNameApp1}
     restart: unless-stopped
     tty: true
     working_dir: /var/www
@@ -22,7 +23,7 @@ services:
     networks:
       - webdocker-network
 
-  app2:
+  app2.example.com:
     build:
       context: .
       dockerfile: ./app2/Dockerfile
